# SvitlaProgrammingChallenge

./: CMakeLists.txt  LICENSE  README.md
dependencies/: qt.cmake
mocks/: CMakeLists.txt  MockApiServer.cpp  MockApiServer.h
src/: CMakeLists.txt  MockApiServer.cpp  main.cpp
tests/: CMakeLists.txt
tests/CreateCableType/: CMakeLists.txt  CreateCableType.cpp
tests/DeleteCableType/: CMakeLists.txt  DeleteCableType.cpp
tests/GetCableType/: CMakeLists.txt  GetCableType.cpp
tests/UpdateCableType/: CMakeLists.txt  UpdateCableType.cpp
tests/login/: CMakeLists.txt  TestLogin.cpp
tests/utils/: CMakeLists.txt  utils.cpp  utils.h
